--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -22,5 +22,5 @@
  * For more details, see https://docs.gradle.org/8.0.1/userguide/java_library_plugin.html#sec:java_library_configurations_graph
  */
 dependencies {
-
+    compileOnly rfg.deobf("curse.maven:smooth-font-285742:3944565")
 }
