--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ loader_version=0.15.3
 # Mod Properties
 mod_version=1.0.0
 maven_group=kpan.better_line_break
-archives_base_name=BetterLineBreak
+archives_base_name=BetterLineBreak-1.16.5(Fabric)
 
 # Dependencies
 fabric_version=0.42.0+1.16
