--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ loader_version=0.15.3
 # Mod Properties
 mod_version=1.0.0
 maven_group=kpan.b_line_break
-archives_base_name=better_line_break
+archives_base_name=BetterLineBreak-1.14.4(Fabric)
 
 # Dependencies
 fabric_version=0.28.5+1.14
