--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,7 @@ loader_version=0.15.6
 # Mod Properties
 mod_version=1.0.0
 maven_group=kpan.b_line_break
-archives_base_name=better_line_break
+archives_base_name=BetterLineBreak-1.20.1(Fabric)
 
 # Dependencies
 fabric_version=0.91.0+1.20.1
