--- a/gradle.properties
+++ b/gradle.properties
@@ -7,13 +7,13 @@ modGroup = kpan.b_line_break
 
 # Version of your mod.
 # This field can be left empty if you want your mod's version to be determined by the latest git tag instead.
-modVersion = 1.0.2
+modVersion = 1.0.3
 
 # Whether to use the old jar naming structure (modid-mcversion-version) instead of the new version (modid-version)
-includeMCVersionJar = true
+includeMCVersionJar = false
 
 # The name of your jar when you produce builds, not including any versioning info
-modArchivesBaseName = BetterLineBreak
+modArchivesBaseName = BetterLineBreak-1.12.2(Forge)
 
 # Will update your build.gradle automatically whenever an update is available
 autoUpdateBuildScript = false
