--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,7 +56,7 @@ jobs:
 
       - name: 環境変数の動的構築2
         run: |
-          echo "TAG_NAME=${{ env.MC_VERSION }}-${{ env.MOD_LOADER }}-${{ env.RELEASE_VERSION }}" >> $GITHUB_ENV
+          echo "TAG_NAME=${{ env.MC_VERSION }}-${{ env.MOD_LOADER }}-${{ env.RELEASE_VERSION }}-TEST" >> $GITHUB_ENV
 
       - name: modの依存関係の動的構築
         id: dependencies
@@ -99,7 +99,7 @@ jobs:
           echo "MC_VERSION" "${{ env.MC_VERSION }}"
           echo "MOD_LOADER" "${{ env.MOD_LOADER }}"
           echo "RELEASE_VERSION" "${{ env.RELEASE_VERSION }}"
-          echo "TAG_NAME" "${{ env.TAG_NAME }}-TEST"
+          echo "TAG_NAME" "${{ env.TAG_NAME }}"
           echo "COMMITISH" "${{ env.COMMITISH }}"
           echo "CHANGELOG" "${{ steps.changelog.outputs.CHANGELOG }}"
           echo "CURSEFORGE_DEPENDENCIES" "${{ steps.dependencies.outputs.CURSEFORGE }}"
