--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,9 +50,9 @@ jobs:
           echo "MOD_LOADER=fabric" >> $GITHUB_ENV
           cat "CHANGELOG.md" | tr -d '\r\n' | sed -r "s/[^-]*-[^-]*-([^]]*).*/RELEASE_VERSION=\1\n/"  >> $GITHUB_ENV
           if [ -z "${{ github.event.inputs.commitish }}" ]; then
-            echo "COMMITISH=\"${{ env.BRANCH_NAME }}\"" >> $GITHUB_ENV
+            echo "COMMITISH=${{ env.BRANCH_NAME }}" >> $GITHUB_ENV
           else
-            echo "COMMITISH=\"${{ github.event.inputs.commitish }}\"" >> $GITHUB_ENV
+            echo "COMMITISH=${{ github.event.inputs.commitish }}" >> $GITHUB_ENV
           fi
 
       - name: 環境変数の動的構築2
@@ -207,3 +207,13 @@ jobs:
           version: "${{ env.RELEASE_VERSION }}"
           version-type: "release"
           retry-attempts: 2
+
+      - name: A
+        run: |
+          curl -L \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ env.GITHUB_TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/KatatsumuriPan/BetterLineBreak/releases \
+          -d '{"tag_name":"v1.0.0","target_commitish":"0e2179db3d7623ccabd14d2b6b857ee68c99ea53","name":"v1.0.0","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
