--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -196,7 +196,7 @@ jobs:
           curl -L \
           -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ env.GITHUB_TOKEN }}" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/KatatsumuriPan/BetterLineBreak/releases \
           -d '{"tag_name":"v1.0.0","target_commitish":"0e2179db3d7623ccabd14d2b6b857ee68c99ea53","name":"v1.0.0","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
